// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App__Footer with default 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 24px 0;
  margin-top: 36px;
  border-top: 1px solid #eee;
  color: #767676;
  font-size: 12px;
}

.emotion-2 > ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-2 > ul > li {
  display: inline-block;
}

.emotion-2 > ul > li + li {
  margin-left: 10px;
}

.emotion-4 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.emotion-0 {
  padding: 0 8px;
  margin-right: 12px;
  line-height: 28px;
  vertical-align: middle;
  color: #ccc;
  font-size: 22px;
  font-family: 'Rajdhani',sans-serif;
  border: 1px solid #ccc;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  border-color: #4078c0;
}

<div
  className="emotion-4 emotion-5"
>
  <div
    className="emotion-2 emotion-3"
  >
    <ul>
      <li>
        © 2016 keik
      </li>
      <li>
        <a
          href="#"
        >
          Help
        </a>
      </li>
    </ul>
    <a
      className="emotion-0 emotion-1"
      href="#"
    >
      GH
    </a>
    <ul>
      <li>
        <a
          href="#"
        >
          API
        </a>
      </li>
      <li>
        <a
          href="#"
        >
          About
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Header with default 1`] = `
.emotion-0 {
  padding: 0 8px;
  margin-right: 12px;
  line-height: 28px;
  vertical-align: middle;
  color: #ccc;
  font-size: 22px;
  font-family: 'Rajdhani',sans-serif;
  border: 1px solid #ccc;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  border-color: #4078c0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px;
  background-color: #24292e;
  border-bottom: 1px solid #e5e5e5;
  font-size: 13px;
}

.emotion-9 > *:last-child {
  margin-left: auto;
}

.emotion-9:after {
  content: '';
  display: table;
  clear: both;
}

.emotion-2 {
  float: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 3px;
}

.emotion-2 label {
  border-right: 1px solid #ddd;
  padding: 4px 8px;
  color: #767676;
  font-size: 12px;
}

.emotion-2 input {
  border: none;
  min-height: 26px;
}

.emotion-7 > * + * {
  margin-left: 12px;
}

.emotion-3 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  display: inline-block;
  color: #fff;
  background-image: linear-gradient(#8add6d,#60b044);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #5aad35;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="emotion-9"
>
  <div>
    <a
      className="emotion-0 emotion-1"
      href="/"
    >
      GH
    </a>
  </div>
  <form
    className="emotion-2"
  >
    <label
      htmlFor="input-search-query"
    >
      <input
        placeholder="Search or jump to..."
      />
    </label>
  </form>
  <div
    className="emotion-7 emotion-8"
  >
    <a
      className="emotion-3 emotion-4"
      href="/login"
    >
      Sign in
    </a>
    <a
      className="emotion-5 emotion-4"
      href="/join"
    >
      Sign up
    </a>
  </div>
</div>
`;

exports[`Storyshots Home with default 1`] = `
.emotion-5 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-0 li {
  padding: 12px 0;
}

.emotion-0 li + li {
  border-top: 1px solid #f1f1f1;
}

.emotion-4 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.emotion-1 {
  padding: 12px;
  background-color: #f7f7f7;
  border-bottom: 1px solid;
  border-color: #d8d8d8;
}

.emotion-3 {
  padding: 0;
}

.emotion-3 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.emotion-3 > table > tbody > tr:first-child td {
  border: none;
}

.emotion-3 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.emotion-2 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-2 li {
  padding: 12px 12px;
}

.emotion-2 li + li {
  border-top: 1px solid #f1f1f1;
}

<div
  className="emotion-5 emotion-6"
>
  <div
    style={
      Object {
        "display": "flex",
        "marginTop": "24px",
      }
    }
  >
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <ul
        className="emotion-0"
      >
        <li>
          ACTIVITY_1
        </li>
        <li>
          ACTIVITY_2
        </li>
        <li>
          ACTIVITY_3
        </li>
      </ul>
    </div>
    <div
      style={
        Object {
          "marginLeft": "24px",
          "width": "320px",
        }
      }
    >
      <div
        className="emotion-4"
      >
        <div
          className="emotion-1"
        >
          Public Repositories
        </div>
        <div
          className="emotion-3"
        >
          <ul
            className="emotion-2"
          >
            <li>
              <i
                className="fa fa-folder-open-o"
              />
               
              <a
                href="/FULL_NAME1"
              >
                FULL_NAME1
              </a>
            </li>
            <li>
              <i
                className="fa fa-folder-open-o"
              />
               
              <a
                href="/FULL_NAME2"
              >
                FULL_NAME2
              </a>
            </li>
            <li>
              <i
                className="fa fa-folder-open-o"
              />
               
              <a
                href="/FULL_NAME3"
              >
                FULL_NAME3
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots New with default 1`] = `
.emotion-18 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.emotion-0 {
  margin: 0;
  font-size: 14px;
  color: #767676;
}

.emotion-2 {
  margin-bottom: 8px;
  display: block;
}

.emotion-2 > label {
  display: block;
  margin-bottom: 8px;
  font-weight: 600;
}

.emotion-4 {
  margin-bottom: 8px;
  display: inline-block;
}

.emotion-4 > label {
  display: block;
  margin-bottom: 8px;
  font-weight: 600;
}

.emotion-16 {
  display: inline-block;
  color: #fff;
  background-image: linear-gradient(#8add6d,#60b044);
  position: relative;
  padding: 6px 12px;
  border: 1px solid #5aad35;
  border-radius: 3px;
  font-size: 14px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-16:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="emotion-18 emotion-19"
>
  <div
    style={
      Object {
        "borderBottom": "1px solid #e5e5e5",
        "marginBottom": "32px",
        "marginTop": "24px",
        "paddingBottom": "8px",
      }
    }
  >
    <h2
      style={
        Object {
          "marginBottom": "0",
        }
      }
    >
      Create a new repository
    </h2>
    <p
      className="emotion-0 emotion-1"
    >
      A repository contains all the files for your project, including the revision history.
    </p>
  </div>
  <form
    action="/api/v1/user/repos"
    method="post"
    onSubmit={[Function]}
  >
    <input
      name="authenticity_token"
      type="hidden"
      value="TRUE"
    />
    <div>
      <div
        className="emotion-2 emotion-3"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <label
          htmlFor="owner"
        >
          Owner
        </label>
        <input
          id="owner"
          name="owner"
          type="text"
        />
      </div>
      <span>
         / 
      </span>
      <div
        className="emotion-4 emotion-3"
      >
        <label
          htmlFor="name"
        >
          Repository name
        </label>
        <input
          id="name"
          name="name"
          type="text"
        />
      </div>
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      <label
        htmlFor="description"
      >
        Description (optional)
      </label>
      <input
        id="description"
        name="description"
        style={
          Object {
            "width": "100%",
          }
        }
        type="text"
      />
    </div>
    <hr />
    <div
      className="emotion-2 emotion-3"
    >
      <label>
        <input
          name="public"
          type="radio"
          value="true"
        />
        Public
      </label>
      <p
        className="emotion-0 emotion-1"
      >
        Anyone can see this repository. You choose who can commit.
      </p>
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      <label>
        <input
          name="public"
          type="radio"
          value="false"
        />
        Private
      </label>
      <p
        className="emotion-0 emotion-1"
      >
        You choose who can see and commit to this repository.
      </p>
    </div>
    <hr />
    <button
      className="emotion-16 emotion-17"
    >
      Create repository
    </button>
  </form>
</div>
`;

exports[`Storyshots Repository/Branches with default 1`] = `
.emotion-1 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-1 li {
  padding: 12px 0;
}

.emotion-1 li + li {
  border-top: 1px solid #f1f1f1;
}

.emotion-3 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.emotion-0 {
  padding: 12px;
  background-color: #f7f7f7;
  border-bottom: 1px solid;
  border-color: #d8d8d8;
}

.emotion-2 {
  padding: 12px;
}

.emotion-2 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.emotion-2 > table > tbody > tr:first-child td {
  border: none;
}

.emotion-2 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

<div>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-0"
    >
      Default branch
    </div>
    <div
      className="emotion-2"
    >
      <ul
        className="emotion-1"
      >
        <li>
          <a
            href="/$OWNER/$REPO/tree/"
          >
            
          </a>
            Updated
           
          <time-ago
            datetime=""
          />
           by 
          <a
            href="/"
          >
            
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-0"
    >
      Active branches
    </div>
    <div
      className="emotion-2"
    >
      <ul
        className="emotion-1"
      >
        <li>
          <a
            href="/$OWNER/$REPO/tree/$BRANCH"
          >
            $BRANCH
          </a>
            Updated 
          <time-ago
            datetime="$DATE"
          />
           
          by 
          <a
            href="/$AUTHOR"
          >
            $AUTHOR
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/Commit with default 1`] = `
.emotion-5 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.emotion-11 {
  padding: 12px;
  background-color: #f7f7f7;
  border-bottom: 1px solid;
  border-color: #d8d8d8;
}

.emotion-3 {
  padding: 12px;
}

.emotion-3 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.emotion-3 > table > tbody > tr:first-child td {
  border: none;
}

.emotion-3 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.emotion-2 {
  padding: 12px;
  background-color: #f2f9fc;
  border-bottom: 1px solid;
  border-color: #c9e6f2;
}

.emotion-0 {
  display: inline-block;
  color: #333;
  background-color: transparent;
  background-image: none;
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 > * {
  border-right-width: 0;
  border-radius: 0;
}

.emotion-9 > *:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-9 > *:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-16 {
  margin: 0;
}

.emotion-12 {
  float: left;
  min-width: 48px;
  padding: 0.5em;
  margin: 0;
  list-style: none;
  font-size: 12px;
  line-height: 18px;
  color: rgba(0,0,0,0.3);
  text-align: right;
  border-right: 1px solid #eee;
}

.emotion-14 {
  background-color: white;
}

<div>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-between",
          }
        }
      >
        <h1
          style={
            Object {
              "color": "#213f4d",
              "fontSize": "18px",
              "fontWeight": "bold",
              "margin": "0",
            }
          }
        >
          $MESSAGE
        </h1>
        <a
          className="emotion-0 emotion-1"
          href="/$OWNER/$REPO/tree/$SHA"
          style={
            Object {
              "float": "right",
            }
          }
        >
          Browse files
        </a>
      </div>
      <div
        style={
          Object {
            "color": "#818c90",
            "fontSize": "12px",
            "margin": "0",
            "minHeight": "18px",
          }
        }
      >
        <i
          className="fa fa-code-fork"
        />
         master
      </div>
    </div>
    <div
      className="emotion-3"
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-between",
          }
        }
      >
        <div>
          <img
            alt="$NAME"
            style={
              Object {
                "background": "#ccc",
                "height": 20,
                "verticalAlign": "middle",
                "width": 20,
              }
            }
          />
           
          $NAME
           commited on
           
          <time-ago
            datetime="$DATE"
          />
        </div>
        <div
          style={
            Object {
              "color": "#767676",
              "fontFamily": "Consolas, \\"Liberation Mono\\", Menlo, Courier, monospace",
              "fontSize": "12px",
              "lineHeight": "24px",
            }
          }
        >
          <span
            style={
              Object {
                "marginRight": "12px",
              }
            }
          >
            0
             parent
          </span>
          <span>
            commit 
            $SHA
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <i
        className="fa fa-file-text-o"
      />
       Showing N changed file with N addition and N deletion.
    </div>
    <div>
      <div
        className="emotion-9 emotion-10"
      >
        <button
          className="emotion-5 emotion-1"
        >
          Unified
        </button>
        <button
          className="emotion-5 emotion-1"
        >
          Split
        </button>
      </div>
    </div>
  </div>
  <div
    id="patches"
  >
    <div
      className="emotion-4"
    >
      <div
        className="emotion-11"
      >
        $FILENAME
      </div>
      <div
        className="emotion-3"
      >
        <pre
          className="emotion-16 emotion-17"
          style={
            Object {
              "margin": 0,
            }
          }
        >
          <ul
            className="emotion-12 emotion-13"
          >
            <li>
              ...
            </li>
            <li>
              1
            </li>
            <li>
              2
            </li>
            <li>
              3
            </li>
            <li>
              4
            </li>
            <li>
              5
            </li>
            <li>
              6
            </li>
            <li>
              7
            </li>
            <li>
              8
            </li>
            <li>
              9
            </li>
            <li>
              10
            </li>
            <li>
              11
            </li>
          </ul>
          <code
            className="hljs emotion-14 emotion-15"
            dangerouslySetInnerHTML={
              Object {
                "__html": "$PATCH",
              }
            }
          />
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/Commits with default 1`] = `
.emotion-2 {
  display: inline-block;
  color: #333;
  background-color: transparent;
  background-image: none;
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 > * {
  border-right-width: 0;
  border-radius: 0;
}

.emotion-6 > *:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-6 > *:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-28 {
  padding: 0;
  margin: 0;
  list-style: none;
  border-right: 1px solid #eee;
  border-bottom: 1px solid #eee;
  border-left: 1px solid #eee;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
  border-top: 1px solid #eee;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 .title {
  font-size: 15px;
  font-weight: bold;
  color: #333;
}

.emotion-0 .meta {
  font-weight: normal;
  color: #767676;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<ul
  className="emotion-28 emotion-29"
>
  <li
    className="emotion-12 emotion-13"
  >
    <div
      className="emotion-0 emotion-1"
    >
      <div>
        <div
          className="title"
        >
          $MESSAGE_1
        </div>
        <div
          className="meta"
        >
          <a
            href="/$NAME_1}"
            onClick={[Function]}
          >
            <img
              alt=""
              src=""
            />
          </a>
          $NAME_1
           commited on
           
          <time-ago
            datetime="$DATE_1"
          />
        </div>
      </div>
    </div>
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-6 emotion-7"
      >
        <button
          className="emotion-2 emotion-3"
        >
          <i
            className="fa fa-clipboard"
          />
        </button>
        <a
          as={[Function]}
          className="emotion-2 emotion-3"
          href="/$OWNER/$REPO/commit/$SHA_1"
          onClick={[Function]}
          small="true"
          transparent="true"
        >
          $SHA_1
        </a>
      </div>
      <a
        as={[Function]}
        className="emotion-2 emotion-3"
        href="/$OWNER/$REPO/tree/$SHA_1"
        onClick={[Function]}
        small="true"
        style={
          Object {
            "marginLeft": "12px",
          }
        }
        transparent="true"
      >
        <i
          className="fa fa-code"
        />
      </a>
    </div>
  </li>
  <li
    className="emotion-12 emotion-13"
  >
    <div
      className="emotion-0 emotion-1"
    >
      <div>
        <div
          className="title"
        >
          $MESSAGE_2
        </div>
        <div
          className="meta"
        >
          <a
            href="/$NAME_2}"
            onClick={[Function]}
          >
            <img
              alt=""
              src=""
            />
          </a>
          $NAME_2
           commited on
           
          <time-ago
            datetime="$DATE_2"
          />
        </div>
      </div>
    </div>
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-6 emotion-7"
      >
        <button
          className="emotion-2 emotion-3"
        >
          <i
            className="fa fa-clipboard"
          />
        </button>
        <a
          as={[Function]}
          className="emotion-2 emotion-3"
          href="/$OWNER/$REPO/commit/$SHA_2"
          onClick={[Function]}
          small="true"
          transparent="true"
        >
          $SHA_2
        </a>
      </div>
      <a
        as={[Function]}
        className="emotion-2 emotion-3"
        href="/$OWNER/$REPO/tree/$SHA_2"
        onClick={[Function]}
        small="true"
        style={
          Object {
            "marginLeft": "12px",
          }
        }
        transparent="true"
      >
        <i
          className="fa fa-code"
        />
      </a>
    </div>
  </li>
</ul>
`;

exports[`Storyshots Repository/FileContent with default 1`] = `
.emotion-3 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.emotion-11 {
  padding: 12px;
  background-color: #f7f7f7;
  border-bottom: 1px solid;
  border-color: #d8d8d8;
}

.emotion-1 {
  padding: 12px;
}

.emotion-1 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.emotion-1 > table > tbody > tr:first-child td {
  border: none;
}

.emotion-1 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.emotion-0 {
  padding: 12px;
  background-color: #f2f9fc;
  border-bottom: 1px solid;
  border-color: #c9e6f2;
}

.emotion-9 > * {
  border-right-width: 0;
  border-radius: 0;
}

.emotion-9 > *:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-9 > *:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-16 {
  margin: 0;
}

.emotion-12 {
  float: left;
  min-width: 48px;
  padding: 0.5em;
  margin: 0;
  list-style: none;
  font-size: 12px;
  line-height: 18px;
  color: rgba(0,0,0,0.3);
  text-align: right;
  border-right: 1px solid #eee;
}

.emotion-14 {
  background-color: white;
}

<div>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    >
      commit tease
    </div>
    <div
      className="emotion-1"
    >
      <button>
        2
         contributors
      </button>
      <a
        href="/$CONTRIBUTOR_1"
        onClick={[Function]}
      >
        <img
          alt="$CONTRIBUTOR_1"
          style={
            Object {
              "background": "#ccc",
              "height": 20,
              "verticalAlign": "middle",
              "width": 20,
            }
          }
        />
      </a>
      <a
        href="/$CONTRIBUTOR_2"
        onClick={[Function]}
      >
        <img
          alt="$CONTRIBUTOR_2"
          style={
            Object {
              "background": "#ccc",
              "height": 20,
              "verticalAlign": "middle",
              "width": 20,
            }
          }
        />
      </a>
    </div>
  </div>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-11"
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-between",
          }
        }
      >
        <div>
          1
           line | 
          10
           bytes
        </div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="emotion-9 emotion-10"
          >
            <a
              as={[Function]}
              className="emotion-3 emotion-4"
              href="/{params.owner}/$REPO/raw/$BRANCH/$PATH"
              onClick={[Function]}
              small="true"
            >
              Raw
            </a>
            <a
              as={[Function]}
              className="emotion-3 emotion-4"
              href="/$OWNER/$REPO/blame/$BRANCH/$PATH"
              onClick={[Function]}
              small="true"
            >
              Blame
            </a>
            <a
              as={[Function]}
              className="emotion-3 emotion-4"
              href="/$OWNER/$REPO/commits/$BRANCH/$PATH"
              onClick={[Function]}
              small="true"
            >
              History
            </a>
          </div>
          <button
            style={
              Object {
                "margin": "0 6px",
              }
            }
          >
            <i
              className="fa fa-pencil"
            />
          </button>
          <button>
            <i
              className="fa fa-trash"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="emotion-1"
    >
      <pre
        className="emotion-16 emotion-17"
      >
        <ul
          className="emotion-12 emotion-13"
        >
          <li>
            1
          </li>
        </ul>
        <code
          className="hljs emotion-14 emotion-15"
          dangerouslySetInnerHTML={
            Object {
              "__html": "$CONTENT",
            }
          }
          id="content"
        />
      </pre>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/Graphs with default 1`] = `
<div>
  <h2>
    graphs
  </h2>
</div>
`;

exports[`Storyshots Repository/Issues with default 1`] = `
.emotion-0 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 > * {
  border-right-width: 0;
  border-radius: 0;
}

.emotion-6 > *:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-6 > *:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-8 .subnav > * {
  display: inline-block;
  margin-right: 12px;
}

.emotion-8 .filter {
  display: inline-block;
}

.emotion-8 .filter:after {
  content: ' ';
  display: table;
  clear: both;
}

.emotion-8 .filter button {
  padding: 6px 10px;
  border-radius: 3px 0 0 3px;
}

.emotion-8 .filter form {
  margin-left: -1px;
  position: relative;
  display: inline-block;
}

.emotion-8 .filter form i {
  position: absolute;
  top: 10px;
  left: 6px;
}

.emotion-8 .filter input {
  width: 320px;
  padding: 6px 10px 6px 32px;
  color: #767676;
  border: 1px solid #d5d5d5;
  border-radius: 0 3px 3px 0;
  line-height: 20px;
}

.emotion-8 .issuesHeader {
  position: relative;
  padding: 12px 12px;
  margin-top: 20px;
  background-color: #f8f8f8;
  border: 1px solid #e5e5e5;
  border-radius: 3px 3px 0 0;
}

.emotion-8 .issuesHeader > * {
  display: inline-block;
  margin-right: 12px;
}

.emotion-8 .issues {
  list-style: none;
  padding: 0;
  margin: 0;
  border-right: 1px solid #eee;
  border-bottom: 1px solid #eee;
  border-left: 1px solid #eee;
}

.emotion-8 .issue {
  padding: 12px 12px;
  border-top: 1px solid #eee;
}

.emotion-8 .issue:first-child {
  border-top: none;
}

.emotion-8 .issue:after {
  content: ' ';
  display: table;
  clear: both;
}

.emotion-8 .issue .icon {
  float: left;
  color: #6cc644;
}

.emotion-8 .issue .main {
  float: left;
  margin-left: 12px;
}

.emotion-8 .issue .main .title {
  color: #333;
  font-size: 16px;
}

.emotion-8 .issue .main .sub {
  font-size: 12px;
}

.emotion-8 .issue .comments {
  float: right;
}

.emotion-2 {
  display: inline-block;
  color: #333;
  background-color: transparent;
  background-image: none;
  position: relative;
  padding: 6px 12px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 14px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="emotion-8 emotion-9"
>
  <div
    className="subnav"
  >
    <div
      className="filter"
    >
      <button
        className="emotion-0 emotion-1"
      >
        Filters
      </button>
      <form>
        <i
          className="fa fa-search"
        />
        <input />
      </form>
    </div>
    <div
      className="emotion-6 emotion-7"
    >
      <a
        as={[Function]}
        className="emotion-2 emotion-1"
        href="/$OWNER/$REPO/labels"
        onClick={[Function]}
        transparent="true"
      >
        Labels
      </a>
      <a
        as={[Function]}
        className="emotion-2 emotion-1"
        href="/$OWNER/$REPO/milestones"
        onClick={[Function]}
        transparent="true"
      >
        Milestones
      </a>
    </div>
  </div>
  <div
    className="issuesHeader"
  >
    <div>
      <a
        href="/$OWNER/$REPO/issues?q=is:open is:issue"
        onClick={[Function]}
      >
        <i
          className="fa fa-exclamation-circle"
        />
         
        2
         Open
      </a>
    </div>
    <div>
      <a
        href="/$OWNER/$REPO/issues?q=is:closed is:issue"
        onClick={[Function]}
      >
        <i
          className="fa fa-check"
        />
         
        -1
         Closed
      </a>
    </div>
  </div>
  <ul
    className="issues"
  >
    <li
      className="issue"
    >
      <div
        className="icon"
      >
        <i
          className="fa fa-exclamation-circle"
        />
      </div>
      <div
        className="main"
      >
        <div
          className="title"
        >
          <a
            href="/$OWNER/$REPO/issues/1"
            onClick={[Function]}
          >
            $TITLE_1
          </a>
        </div>
        <div
          className="sub"
        >
          <span>
            #
            1
          </span>
           opened
           
          <time-ago
            datetime="$CREATED_AT_1"
          />
           by
           
          <a
            href="/$CREATED_BY_1"
            onClick={[Function]}
          >
            $CREATED_BY_1
          </a>
        </div>
      </div>
      <div
        className="comments"
      >
        <div>
          <a
            href="/$OWNER/$REPO/issues/1"
            onClick={[Function]}
          >
            <i
              className="fa fa-comment-o"
            />
             
            1
          </a>
        </div>
      </div>
    </li>
    <li
      className="issue"
    >
      <div
        className="icon"
      >
        <i
          className="fa fa-exclamation-circle"
        />
      </div>
      <div
        className="main"
      >
        <div
          className="title"
        >
          <a
            href="/$OWNER/$REPO/issues/2"
            onClick={[Function]}
          >
            $TITLE_2
          </a>
        </div>
        <div
          className="sub"
        >
          <span>
            #
            2
          </span>
           opened
           
          <time-ago
            datetime="$CREATED_AT_2"
          />
           by
           
          <a
            href="/$CREATED_BY_2"
            onClick={[Function]}
          >
            $CREATED_BY_2
          </a>
        </div>
      </div>
      <div
        className="comments"
      >
        <div>
          <a
            href="/$OWNER/$REPO/issues/2"
            onClick={[Function]}
          >
            <i
              className="fa fa-comment-o"
            />
             
            2
          </a>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Repository/Milestones with default 1`] = `
<div>
  <h2>
    milestones
  </h2>
</div>
`;

exports[`Storyshots Repository/Projects with default 1`] = `
<div>
  <h2>
    projects
  </h2>
</div>
`;

exports[`Storyshots Repository/Pulse with default 1`] = `
<div>
  <h2>
    pulse
  </h2>
</div>
`;

exports[`Storyshots Repository/Settings with default 1`] = `
<div>
  <h2>
    settings
  </h2>
</div>
`;

exports[`Storyshots Repository/Tree with default 1`] = `
.emotion-0 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.emotion-9 {
  padding: 0;
}

.emotion-9 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.emotion-9 > table > tbody > tr:first-child td {
  border: none;
}

.emotion-9 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.emotion-8 {
  padding: 12px;
  background-color: #f2f9fc;
  border-bottom: 1px solid;
  border-color: #c9e6f2;
}

.emotion-2 {
  padding: 8px 10px;
  line-height: 16px;
  background: #f5f5f5;
  border-bottom: 1px solid #e5e5e5;
  font-size: 12px;
  font-weight: 600;
  color: #333;
}

.emotion-4 {
  background-color: #fff;
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-4 > li > a {
  display: block;
  padding: 8px 8px 8px 30px;
  border-bottom: 1px solid #eee;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 > li > a:hover {
  color: #fff;
  background-color: #4078c0;
}

.emotion-11 table tr td.icon {
  width: 18px;
  padding-left: 12px;
}

.emotion-11 table tr td.commitMessage {
  padding-left: 12px;
}

.emotion-11 table tr td.commitMessage a {
  color: #888;
}

.emotion-11 table tr td.updateAt {
  width: 120px;
  padding-right: 12px;
  text-align: right;
}

.emotion-11 .sha {
  font-family: Consolas,'Liberation Mono',Menlo,Courier,monospace;
  font-size: 90%;
  color: #445055;
}

<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "marginBottom": "12px",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "12px",
        }
      }
    >
      <div>
        <button
          className="emotion-0 emotion-1"
          onClick={[Function]}
        >
          <i>
            Branch: 
          </i>
          <span>
            #TREE
             
          </span>
          <i
            className="fa fa-caret-down"
          />
        </button>
        <div
          className="modal"
          style={
            Object {
              "display": "none",
              "position": "absolute",
              "width": 300,
            }
          }
        >
          <div
            style={
              Object {
                "backgroundClip": "padding-box",
                "backgroundColor": "#fff",
                "border": "1px solid rgba(200, 200, 200, 0.4)",
                "borderRadius": "3px",
                "boxShadow": "0 3px 12px rgba(0,0,0,0.15)",
                "position": "absolute",
                "width": "100%",
                "zIndex": 100,
              }
            }
          >
            <div
              className="emotion-2 emotion-3"
            >
              Switch branches/tags
              <button
                onClick={[Function]}
                style={
                  Object {
                    "background": "none",
                    "border": 0,
                    "color": "#ccc",
                    "cursor": "pointer",
                    "float": "right",
                  }
                }
              >
                <i
                  className="fa fa-close"
                />
              </button>
            </div>
            <div
              style={
                Object {
                  "backgroundColor": "#f8f8f8",
                }
              }
            >
              <div
                style={
                  Object {
                    "padding": "10px 10px 0",
                  }
                }
              >
                <input
                  placeholder="Find a tag..."
                  style={
                    Object {
                      "border": "1px solid #ddd",
                      "borderRadius": "3px",
                      "lineHeight": "20px",
                      "padding": "6px",
                      "width": "100%",
                    }
                  }
                />
              </div>
              <div>
                <ul
                  style={
                    Object {
                      "borderBottom": "1px solid #ddd",
                      "listStyle": "none",
                      "margin": 0,
                      "padding": "8px 8px 0",
                    }
                  }
                >
                  <li
                    style={
                      Object {
                        "backgroundColor": "#fff",
                        "borderLeft": "1px solid #ddd",
                        "borderRight": "1px solid #ddd",
                        "borderTop": "1px solid #ddd",
                        "borderTopLeftRadius": 3,
                        "borderTopRightRadius": 3,
                        "float": "left",
                        "marginBottom": "-1px",
                      }
                    }
                  >
                    <a
                      href="#"
                      onClick={[Function]}
                      style={
                        Object {
                          "color": "#333",
                          "display": "block",
                          "fontSize": "11px",
                          "fontWeight": "bold",
                          "padding": "4px 8px 2px",
                          "textDecoration": "none",
                        }
                      }
                    >
                      Branches
                    </a>
                  </li>
                  <li
                    style={
                      Object {
                        "float": "left",
                        "marginBottom": "-1px",
                      }
                    }
                  >
                    <a
                      href="#"
                      onClick={[Function]}
                      style={
                        Object {
                          "color": "#888",
                          "display": "block",
                          "fontSize": "11px",
                          "fontWeight": "bold",
                          "padding": "4px 8px 2px",
                          "textDecoration": "none",
                        }
                      }
                    >
                      Tags
                    </a>
                  </li>
                  <div
                    style={
                      Object {
                        "clear": "both",
                        "display": "table",
                      }
                    }
                  />
                </ul>
                <div
                  style={
                    Object {
                      "display": "block",
                    }
                  }
                >
                  <div
                    className="emotion-4 emotion-5"
                  >
                    <li>
                      <a
                        href="/#OWNER/#REPO/tree/#BRANCH_1"
                      >
                        #BRANCH_1
                      </a>
                    </li>
                    <li>
                      <a
                        href="/#OWNER/#REPO/tree/#BRANCH_2"
                      >
                        #BRANCH_2
                      </a>
                    </li>
                  </div>
                </div>
                <div
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                >
                  <div
                    className="emotion-4 emotion-5"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            onClick={[Function]}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "fixed",
                "right": 0,
                "top": 0,
                "zIndex": 1,
              }
            }
          />
        </div>
      </div>
    </div>
    <div>
      <strong>
        <a
          href="/#OWNER/#REPO/tree/#TREE"
          onClick={[Function]}
        >
          #REPO
        </a>
      </strong>
      <span
        style={
          Object {
            "margin": "0 6px",
          }
        }
      >
        /
      </span>
      <strong>
        #PATH
      </strong>
      <span
        style={
          Object {
            "margin": "0 6px",
          }
        }
      >
        /
      </span>
    </div>
  </div>
  <div
    className="emotion-11 emotion-12"
  >
    <div
      className="emotion-10"
    >
      <div
        className="emotion-8"
      >
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "space-between",
            }
          }
        >
          <div>
            <img
              alt="#NAME_1"
              style={
                Object {
                  "background": "#ccc",
                  "height": 20,
                  "verticalAlign": "middle",
                  "width": 20,
                }
              }
            />
             
            <a
              href="/#NAME_1"
            >
              #NAME_1
            </a>
             
            <a
              href="/#OWNER/#REPO/commit/#SHA_1"
              onClick={[Function]}
            >
              #MESSAGE_1
            </a>
          </div>
          <div>
            Latest commit 
            <a
              className="sha"
              href="/#OWNER/#REPO/commit/#SHA_1"
              onClick={[Function]}
            >
              #SHA_1
            </a>
             
            <time-ago
              datetime="#DATE_1"
            />
          </div>
        </div>
      </div>
      <div
        className="emotion-9"
      >
        <table>
          <tbody>
            <tr>
              <td
                className="icon"
              >
                <i
                  className="fa fa-file-text-o"
                />
              </td>
              <td
                className="name"
              >
                <a
                  href="/#OWNER/#REPO/blob/#TREE/#PATH/#PATH_1"
                  onClick={[Function]}
                >
                  #PATH_1
                </a>
              </td>
              <td
                className="commitMessage"
              >
                <a
                  href="/#OWNER/#REPO/commit/#SHA_1"
                  onClick={[Function]}
                >
                  #MESSAGE_1
                </a>
              </td>
              <td
                className="updateAt"
              >
                <time-ago
                  datetime="#DATE_1"
                />
              </td>
            </tr>
            <tr>
              <td
                className="icon"
              >
                <i
                  className="fa fa-file-text-o"
                />
              </td>
              <td
                className="name"
              >
                <a
                  href="/#OWNER/#REPO/blob/#TREE/#PATH/#PATH_2"
                  onClick={[Function]}
                >
                  #PATH_2
                </a>
              </td>
              <td
                className="commitMessage"
              >
                <a
                  href="/#OWNER/#REPO/commit/#SHA_1"
                  onClick={[Function]}
                >
                  #MESSAGE_1
                </a>
              </td>
              <td
                className="updateAt"
              >
                <time-ago
                  datetime="#DATE_1"
                />
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/Tree__Breadcrumbs with 3rd level path 1`] = `
<div>
  <strong>
    <a
      href="/foo/bar/tree/TREE"
      onClick={[Function]}
    >
      bar
    </a>
  </strong>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
  <a
    href="/foo/bar/tree/TREE/a"
    onClick={[Function]}
  >
    a
  </a>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
  <a
    href="/foo/bar/tree/TREE/a/b"
    onClick={[Function]}
  >
    b
  </a>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
  <strong>
    c
  </strong>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
</div>
`;

exports[`Storyshots Repository/Tree__Breadcrumbs with default 1`] = `
<div>
  <strong>
    <a
      href="/foo/bar/tree/TREE"
      onClick={[Function]}
    >
      bar
    </a>
  </strong>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
  <strong>
    PATH
  </strong>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
</div>
`;

exports[`Storyshots Repository/Wiki with default 1`] = `
<div>
  <h2>
    wiki
  </h2>
</div>
`;

exports[`Storyshots Repository/shared/Entries with default 1`] = `
.emotion-2 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.emotion-1 {
  padding: 0;
}

.emotion-1 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.emotion-1 > table > tbody > tr:first-child td {
  border: none;
}

.emotion-1 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.emotion-0 {
  padding: 12px;
  background-color: #f2f9fc;
  border-bottom: 1px solid;
  border-color: #c9e6f2;
}

.emotion-3 table tr td.icon {
  width: 18px;
  padding-left: 12px;
}

.emotion-3 table tr td.commitMessage {
  padding-left: 12px;
}

.emotion-3 table tr td.commitMessage a {
  color: #888;
}

.emotion-3 table tr td.updateAt {
  width: 120px;
  padding-right: 12px;
  text-align: right;
}

.emotion-3 .sha {
  font-family: Consolas,'Liberation Mono',Menlo,Courier,monospace;
  font-size: 90%;
  color: #445055;
}

<div
  className="emotion-3 emotion-4"
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-between",
          }
        }
      >
        <div>
          <img
            alt="#NAME_1"
            style={
              Object {
                "background": "#ccc",
                "height": 20,
                "verticalAlign": "middle",
                "width": 20,
              }
            }
          />
           
          <a
            href="/#NAME_1"
          >
            #NAME_1
          </a>
           
          <a
            href="/#OWNER/#REPO/commit/#SHA_1"
            onClick={[Function]}
          >
            #MESSAGE_1
          </a>
        </div>
        <div>
          Latest commit 
          <a
            className="sha"
            href="/#OWNER/#REPO/commit/#SHA_1"
            onClick={[Function]}
          >
            #SHA_1
          </a>
           
          <time-ago
            datetime="#DATE_1"
          />
        </div>
      </div>
    </div>
    <div
      className="emotion-1"
    >
      <table>
        <tbody>
          <tr>
            <td
              className="icon"
            >
              <i
                className="fa fa-file-text-o"
              />
            </td>
            <td
              className="name"
            >
              <a
                href="/#OWNER/#REPO/blob/#TREE/#PATH/#PATH_2"
                onClick={[Function]}
              >
                #PATH_2
              </a>
            </td>
            <td
              className="commitMessage"
            >
              <a
                href="/#OWNER/#REPO/commit/#SHA_1"
                onClick={[Function]}
              >
                #MESSAGE_1
              </a>
            </td>
            <td
              className="updateAt"
            >
              <time-ago
                datetime="#DATE_1"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/shared/TreeSelector with default 1`] = `
.emotion-0 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  padding: 8px 10px;
  line-height: 16px;
  background: #f5f5f5;
  border-bottom: 1px solid #e5e5e5;
  font-size: 12px;
  font-weight: 600;
  color: #333;
}

.emotion-4 {
  background-color: #fff;
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-4 > li > a {
  display: block;
  padding: 8px 8px 8px 30px;
  border-bottom: 1px solid #eee;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 > li > a:hover {
  color: #fff;
  background-color: #4078c0;
}

<div>
  <button
    className="emotion-0 emotion-1"
    onClick={[Function]}
  >
    <i>
      Branch: 
    </i>
    <span>
      $TREE
       
    </span>
    <i
      className="fa fa-caret-down"
    />
  </button>
  <div
    className="modal"
    style={
      Object {
        "display": "none",
        "position": "absolute",
        "width": 300,
      }
    }
  >
    <div
      style={
        Object {
          "backgroundClip": "padding-box",
          "backgroundColor": "#fff",
          "border": "1px solid rgba(200, 200, 200, 0.4)",
          "borderRadius": "3px",
          "boxShadow": "0 3px 12px rgba(0,0,0,0.15)",
          "position": "absolute",
          "width": "100%",
          "zIndex": 100,
        }
      }
    >
      <div
        className="emotion-2 emotion-3"
      >
        Switch branches/tags
        <button
          onClick={[Function]}
          style={
            Object {
              "background": "none",
              "border": 0,
              "color": "#ccc",
              "cursor": "pointer",
              "float": "right",
            }
          }
        >
          <i
            className="fa fa-close"
          />
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#f8f8f8",
          }
        }
      >
        <div
          style={
            Object {
              "padding": "10px 10px 0",
            }
          }
        >
          <input
            placeholder="Find a tag..."
            style={
              Object {
                "border": "1px solid #ddd",
                "borderRadius": "3px",
                "lineHeight": "20px",
                "padding": "6px",
                "width": "100%",
              }
            }
          />
        </div>
        <div>
          <ul
            style={
              Object {
                "borderBottom": "1px solid #ddd",
                "listStyle": "none",
                "margin": 0,
                "padding": "8px 8px 0",
              }
            }
          >
            <li
              style={
                Object {
                  "backgroundColor": "#fff",
                  "borderLeft": "1px solid #ddd",
                  "borderRight": "1px solid #ddd",
                  "borderTop": "1px solid #ddd",
                  "borderTopLeftRadius": 3,
                  "borderTopRightRadius": 3,
                  "float": "left",
                  "marginBottom": "-1px",
                }
              }
            >
              <a
                href="#"
                onClick={[Function]}
                style={
                  Object {
                    "color": "#333",
                    "display": "block",
                    "fontSize": "11px",
                    "fontWeight": "bold",
                    "padding": "4px 8px 2px",
                    "textDecoration": "none",
                  }
                }
              >
                Branches
              </a>
            </li>
            <li
              style={
                Object {
                  "float": "left",
                  "marginBottom": "-1px",
                }
              }
            >
              <a
                href="#"
                onClick={[Function]}
                style={
                  Object {
                    "color": "#888",
                    "display": "block",
                    "fontSize": "11px",
                    "fontWeight": "bold",
                    "padding": "4px 8px 2px",
                    "textDecoration": "none",
                  }
                }
              >
                Tags
              </a>
            </li>
            <div
              style={
                Object {
                  "clear": "both",
                  "display": "table",
                }
              }
            />
          </ul>
          <div
            style={
              Object {
                "display": "block",
              }
            }
          >
            <div
              className="emotion-4 emotion-5"
            >
              <li>
                <a
                  href="/$OWNER/$REPO/tree/$BRANCH"
                >
                  $BRANCH
                </a>
              </li>
            </div>
          </div>
          <div
            style={
              Object {
                "display": "none",
              }
            }
          >
            <div
              className="emotion-4 emotion-5"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Repository1 part of Navigations 1`] = `
.emotion-1 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  padding: 0;
  margin: 0;
  width: 100%;
}

.emotion-0 a {
  display: block;
  padding: 7px 15px 8px;
  margin-bottom: -1px;
  color: #666;
}

.emotion-0 .selected {
  background-color: #fff;
  border-left: 1px solid #e5e5e5;
  border-top: 3px solid #d26911;
  border-right: 1px solid #e5e5e5;
}

.emotion-0 .fa {
  margin-right: 0.5em;
}

<div
  className="emotion-1 emotion-2"
>
  <nav
    className="reponav"
  >
    <ul
      className="emotion-0"
    >
      <li>
        <a
          className=""
          href="/$OWNER/$REPO"
          onClick={[Function]}
        >
          <i
            className="fa fa-code"
          />
          Code
        </a>
      </li>
      <li>
        <a
          className=""
          href="/$OWNER/$REPO/issues"
          onClick={[Function]}
        >
          <i
            className="fa fa-exclamation-circle"
          />
          Issues 1
        </a>
      </li>
      <li>
        <a
          className=""
          href="/$OWNER/$REPO/pulls"
          onClick={[Function]}
        >
          <i
            className="fa fa-code-fork"
          />
          Pull requests 2
        </a>
      </li>
      <li>
        <a
          className=""
          href="/$OWNER/$REPO/projects"
          onClick={[Function]}
        >
          <i
            className="fa fa-group"
          />
          Projects 3
        </a>
      </li>
      <li>
        <a
          className=""
          href="/$OWNER/$REPO/wiki"
          onClick={[Function]}
        >
          <i
            className="fa fa-book"
          />
          Wiki
        </a>
      </li>
      <li>
        <a
          className=""
          href="/$OWNER/$REPO/pulse"
          onClick={[Function]}
        >
          <i
            className="fa fa-line-chart"
          />
          Pulse
        </a>
      </li>
      <li>
        <a
          className=""
          href="/$OWNER/$REPO/graphs"
          onClick={[Function]}
        >
          <i
            className="fa fa-bar-chart"
          />
          Graphs
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Storyshots Repository1 with default 1`] = `
.emotion-25 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.emotion-3 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  display: inline-block;
  color: #333;
  background-color: transparent;
  background-image: none;
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 > * {
  border-right-width: 0;
  border-radius: 0;
}

.emotion-7 > *:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-7 > *:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-30 {
  margin-bottom: 24px;
  background-color: #fafafa;
  border-bottom: 1px solid #eee;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-1 {
  display: inline-block;
  color: #666;
  font-size: 18px;
}

.emotion-0 {
  margin: 0 4px;
}

.emotion-21 {
  list-style: none;
  padding: 0;
}

.emotion-21 > li {
  display: inline-block;
  margin-left: 12px;
}

.emotion-21 > li i:first-child {
  margin-right: 4px;
}

.emotion-2 {
  margin-left: 4px;
}

.emotion-24 {
  background-color: #fff;
}

.emotion-23 {
  list-style: none;
  padding: 0;
}

.emotion-23 > li {
  padding: 8px;
  border-bottom: 1px solid #eee;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  padding: 0;
  margin: 0;
  width: 100%;
}

.emotion-27 a {
  display: block;
  padding: 7px 15px 8px;
  margin-bottom: -1px;
  color: #666;
}

.emotion-27 .selected {
  background-color: #fff;
  border-left: 1px solid #e5e5e5;
  border-top: 3px solid #d26911;
  border-right: 1px solid #e5e5e5;
}

.emotion-27 .fa {
  margin-right: 0.5em;
}

<div>
  <div
    className="emotion-30"
  >
    <div
      className="emotion-25 emotion-26"
    >
      <div
        className="emotion-22"
      >
        <h1
          className="emotion-1"
        >
          <a
            href="/$OWNER"
          >
            $OWNER
          </a>
          <span
            className="emotion-0"
          >
            /
          </span>
          <a
            href="/$OWNER/$REPO"
          >
            $REPO
          </a>
        </h1>
        <nav>
          <ul
            className="emotion-21"
          >
            <li>
              <div
                className="emotion-7 emotion-8"
              >
                <button
                  className="emotion-3 emotion-4"
                  onClick={[Function]}
                >
                  <i
                    className="fa fa-eye"
                  />
                  Watch
                  <i
                    className="emotion-2 fa fa-caret-down"
                  />
                </button>
                <a
                  className="emotion-5 emotion-4"
                  href="#"
                >
                  -1
                </a>
              </div>
            </li>
            <li>
              <div
                className="emotion-7 emotion-8"
              >
                <button
                  className="emotion-3 emotion-4"
                >
                  <i
                    className="fa fa-star"
                  />
                  Star
                </button>
                <a
                  className="emotion-5 emotion-4"
                  href="#"
                >
                  -1
                </a>
              </div>
            </li>
            <li>
              <div
                className="emotion-7 emotion-8"
              >
                <button
                  className="emotion-3 emotion-4"
                >
                  <i
                    className="fa fa-code-fork"
                  />
                  Fork
                </button>
                <a
                  className="emotion-5 emotion-4"
                  href="#"
                >
                  -1
                </a>
              </div>
            </li>
          </ul>
        </nav>
      </div>
      <div
        className="modal"
        style={
          Object {
            "display": "none",
            "position": "absolute",
            "width": undefined,
          }
        }
      >
        <div
          style={
            Object {
              "backgroundClip": "padding-box",
              "backgroundColor": "#fff",
              "border": "1px solid rgba(200, 200, 200, 0.4)",
              "borderRadius": "3px",
              "boxShadow": "0 3px 12px rgba(0,0,0,0.15)",
              "position": "absolute",
              "width": "100%",
              "zIndex": 100,
            }
          }
        >
          <div
            className="emotion-24"
          >
            <div>
              Notifications
              <a
                href="#"
              >
                x
              </a>
            </div>
            <ul
              className="emotion-23"
            >
              <li>
                <a>
                  <span>
                    Not watching
                  </span>
                  <span>
                    Be notified when participating or @mentioned.
                  </span>
                </a>
              </li>
              <li>
                <a>
                  <span>
                    Watching
                  </span>
                  <span>
                    Be notified of all conversations.
                  </span>
                </a>
              </li>
              <li>
                <a>
                  <span>
                    Ignoring
                  </span>
                  <span>
                    Never be notified.
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          onClick={[Function]}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "fixed",
              "right": 0,
              "top": 0,
              "zIndex": 1,
            }
          }
        />
      </div>
    </div>
    <div
      className="emotion-25 emotion-26"
    >
      <nav
        className="reponav"
      >
        <ul
          className="emotion-27"
        >
          <li>
            <a
              className=""
              href="/$OWNER/$REPO"
              onClick={[Function]}
            >
              <i
                className="fa fa-code"
              />
              Code
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/issues"
              onClick={[Function]}
            >
              <i
                className="fa fa-exclamation-circle"
              />
              Issues -1
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/pulls"
              onClick={[Function]}
            >
              <i
                className="fa fa-code-fork"
              />
              Pull requests -1
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/projects"
              onClick={[Function]}
            >
              <i
                className="fa fa-group"
              />
              Projects -1
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/wiki"
              onClick={[Function]}
            >
              <i
                className="fa fa-book"
              />
              Wiki
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/pulse"
              onClick={[Function]}
            >
              <i
                className="fa fa-line-chart"
              />
              Pulse
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/graphs"
              onClick={[Function]}
            >
              <i
                className="fa fa-bar-chart"
              />
              Graphs
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/settings"
              onClick={[Function]}
            >
              <i
                className="fa fa-gear"
              />
              Settings
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
  <div
    className="emotion-25 emotion-26"
  >
    children
  </div>
</div>
`;
